<resources>
    <string name="app_name">EasyNFC</string>
    <string name="empty" />

    <!--Tabs-->
    <string name="first_tab_title">write</string>
    <string name="second_tab_title">read</string>
    <string name="third_tab_title">my tags</string>

    <!--Tags-->
    <string name="btn_text">Text</string>
    <string name="btn_url">Url</string>
    <string name="btn_sms">Sms</string>
    <string name="btn_phone">Phone</string>
    <string name="btn_launcher">App Launcher</string>
    <string name="btn_location">Location</string>
    <string name="btn_wi_fi">Wi-Fi</string>
    <string name="btn_email">Email</string>
    <string name="btn_format">Format</string>
    <string name="btn_lock">Lock</string>

    <!--Read-->
    <string name="type">Type</string>
    <string name="tag">Tag</string>
    <string name="tech">Tech</string>
    <string name="tnf">Tnf</string>
    <string name="rtd">Rtd</string>
    <string name="size">Size</string>
    <string name="txt_value_placeholder">Value…</string>

    <!--Loading-->
    <string name="loading_iv_desc">Loading image</string>
    <string name="loading_title">Please, tap a tag to read…</string>
    <string name="btn_save">Save into my tags</string>

    <!--Category-->
    <string name="category_txt_title">Text</string>
    <string name="category_txt_subtitle">simple text tag</string>
    <string name="category_comm_title">Contact</string>
    <string name="category_comm_subtitle">email, phone, sms…</string>
    <string name="category_utils_title">Utils</string>
    <string name="category_utils_subtitle">url, wifi, location, launcher…</string>
    <string name="category_tag_title">Clean</string>
    <string name="category_tag_subtitle">format, lock…</string>
    <string name="category_email_title">Email</string>
    <string name="category_email_subtitle">Save &amp; send emails</string>
    <string name="category_phone_title">Phone</string>
    <string name="category_phone_subtitle">Make phone calls</string>
    <string name="category_sms_title">Sms</string>
    <string name="category_sms_subtitle">Send predefined sms</string>
    <string name="category_format_title">Format</string>
    <string name="category_format_subtitle">Empty your tag </string>
    <string name="category_lock_title">Lock</string>
    <string name="category_lock_subtitle">This action is irreversible</string>
    <string name="category_url_title">Url</string>
    <string name="category_url_subtitle">Visit a website</string>
    <string name="category_wifi_title">Wifi</string>
    <string name="category_wifi_subtitle">Connect to a wi-fi</string>
    <string name="category_location_title">Location</string>
    <string name="category_location_subtitle">Map location launcher</string>
    <string name="category_launcher_title">Launcher</string>
    <string name="category_launcher_subtitle">Open an app</string>

    <!--Toolbar-->
    <string name="toolbar_title_write">Write</string>
    <string name="toolbar_title_read">Read</string>
    <string name="toolbar_title_text">Text</string>
    <string name="toolbar_title_mytags">My Tags</string>
    <string name="toolbar_title_contact">Contact</string>
    <string name="toolbar_title_utils">Utils</string>
    <string name="toolbar_title_clean">Clean</string>
    <string name="toolbar_title_email">Email</string>
    <string name="toolbar_title_phone">Phone</string>
    <string name="toolbar_title_url">Url</string>
    <string name="toolbar_title_launcher">Launcher</string>

    <!--Write-->
    <string name="btn_record">Record</string>
    <string name="et_writer_hint">Click to write</string>
    <string name="et_writer_hint_wr">Writing…</string>
    <string name="menu_item_order">Order by</string>
    <string name="menu_item_remove">Delete All</string>

</resources>
