<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="true"
    android:focusable="true"
    android:paddingBottom="@dimen/app_padding"
    android:paddingStart="@dimen/app_padding"
    android:paddingEnd="@dimen/app_padding"
    tools:context=".presentation.ui.read.ReadFragment">

    <TextView
        android:id="@+id/txtContent"
        style="@style/txt_content_auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/app_padding"
        android:paddingStart="@dimen/app_padding"
        android:paddingEnd="@dimen/app_padding"
        android:text="@string/txt_content_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/separator"
        style="@style/separator"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/column_key"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toStartOf="@+id/column_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.2">

        <TextView
            android:id="@+id/txtType"
            style="@style/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            app:layout_constraintBottom_toTopOf="@+id/txtTag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/txtTag"
            style="@style/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tag"
            app:layout_constraintBottom_toTopOf="@id/txtTech"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtType" />

        <TextView
            android:id="@+id/txtTech"
            style="@style/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tech"
            app:layout_constraintBottom_toTopOf="@id/txtTnf"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTag" />

        <TextView
            android:id="@+id/txtTnf"
            style="@style/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tnf"
            app:layout_constraintBottom_toTopOf="@id/txtRtd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTech" />

        <TextView
            android:id="@+id/txtRtd"
            style="@style/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rtd"
            app:layout_constraintBottom_toTopOf="@id/txtSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTnf" />

        <TextView
            android:id="@+id/txtSize"
            style="@style/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtRtd" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/column_value"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/column_key"
        app:layout_constraintTop_toBottomOf="@id/separator"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8">


        <TextView
            android:id="@+id/txtTypeValue"
            style="@style/txt_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_value_placeholder"
            app:layout_constraintBottom_toTopOf="@+id/txtTagValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />


        <TextView
            android:id="@+id/txtTagValue"
            style="@style/txt_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_value_placeholder"
            app:layout_constraintBottom_toTopOf="@id/txtTechValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTypeValue" />


        <TextView
            android:id="@+id/txtTechValue"
            style="@style/txt_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_value_placeholder"
            app:layout_constraintBottom_toTopOf="@id/txtTnfValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTagValue" />


        <TextView
            android:id="@+id/txtTnfValue"
            style="@style/txt_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_value_placeholder"
            app:layout_constraintBottom_toTopOf="@id/txtRtdValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTechValue" />


        <TextView
            android:id="@+id/txtRtdValue"
            style="@style/txt_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_value_placeholder"
            app:layout_constraintBottom_toTopOf="@id/txtSizeValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTnfValue" />


        <TextView
            android:id="@+id/txtSizeValue"
            style="@style/txt_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/txt_value_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtRtdValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnSave"
        style="@style/btn_footer_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_footer_light"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>