<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgorund_gradient"
    tools:context=".presentation.ui.category.CategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnUrl"
        style="@style/menu_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnWifi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/urlTitle"
            style="@style/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_url_title"
            app:layout_constraintBottom_toTopOf="@+id/urlSubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/urlSubtitle"
            style="@style/menu_txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_url_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/urlTitle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/ic_chevron_right_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnWifi"
        style="@style/menu_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLocation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUrl">

        <TextView
            android:id="@+id/wifiTitle"
            style="@style/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_wifi_title"
            app:layout_constraintBottom_toTopOf="@+id/wifiSubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/wifiSubtitle"
            style="@style/menu_txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_wifi_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wifiTitle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnLocation"
        style="@style/menu_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLauncher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWifi">

        <TextView
            android:id="@+id/locationTitle"
            style="@style/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_location_title"
            app:layout_constraintBottom_toTopOf="@+id/locationSubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/locationSubtitle"
            style="@style/menu_txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_location_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTitle"  />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnLauncher"
        style="@style/menu_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLocation">

        <TextView
            android:id="@+id/launcherTitle"
            style="@style/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_launcher_title"
            app:layout_constraintBottom_toTopOf="@+id/launcherSubtitle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/launcherSubtitle"
            style="@style/menu_txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_launcher_subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launcherTitle"  />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>