<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".presentation.ui.category.CategoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnText"
        style="@style/menu_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnContact"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside">

        <TextView
            android:id="@+id/textTitle"
            style="@style/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_txt_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/textSubtitle"
            style="@style/menu_txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_txt_subtitle"
            app:layout_constraintLeft_toRightOf="@+id/textIcon"
            app:layout_constraintTop_toBottomOf="@id/textTitle" />

        <ImageView
            android:id="@+id/textChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/ic_chevron_right_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/textIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_text"
            app:layout_constraintBottom_toBottomOf="@id/textChevron"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textChevron" />

        <RelativeLayout
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnContact"
        style="@style/menu_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnUtils"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnText">

        <TextView
            android:id="@+id/contactTitle"
            style="@style/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_comm_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/contactIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/contactSubtitle"
            style="@style/menu_txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_comm_subtitle"
            app:layout_constraintLeft_toRightOf="@+id/contactIcon"
            app:layout_constraintTop_toBottomOf="@id/contactTitle" />

        <ImageView
            android:id="@+id/contactChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/contactIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_contacts"
            app:layout_constraintBottom_toBottomOf="@id/contactChevron"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/contactChevron" />

        <RelativeLayout
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnUtils"
        style="@style/menu_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClean"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnContact">

        <TextView
            android:id="@+id/utilTitle"
            style="@style/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_utils_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/utilIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/utilSubtitle"
            style="@style/menu_txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_utils_subtitle"
            app:layout_constraintLeft_toRightOf="@+id/utilIcon"
            app:layout_constraintTop_toBottomOf="@id/utilTitle" />

        <ImageView
            android:id="@+id/utilChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/utilIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_utils"
            app:layout_constraintBottom_toBottomOf="@id/utilChevron"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/utilChevron" />

        <RelativeLayout
            style="@style/separator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/separator_height"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnClean"
        style="@style/menu_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUtils">

        <TextView
            android:id="@+id/cleanTitle"
            style="@style/menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_tag_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/cleanIcon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/cleanSubtitle"
            style="@style/menu_txt_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_tag_subtitle"
            app:layout_constraintLeft_toRightOf="@+id/cleanIcon"
            app:layout_constraintTop_toBottomOf="@id/cleanTitle" />

        <ImageView
            android:id="@+id/cleanChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_chevron_right_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cleanIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_clean"
            app:layout_constraintBottom_toBottomOf="@id/cleanChevron"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/cleanChevron" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>